--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "gridsome": "^0.7.0",
-    "volar-service-vetur": "^0.0.9"
+    "volar-service-vetur": "^0.0.9",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "postcss": "^7.0.39",
     "autoprefixer": "^9.8.8"
   }
